2005-03-21  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c : Minor code updates and clean up functions that didn't
	need prototypes and could use 'static' instead. 
	Use games-stock items.
	(creates_statusbar): Status now resembles gnomine and same-gnome.
	(button_release_space): Win message shortened.
	(update_menu_state): Moved, use new GtkAction functions.
	

2005-03-17  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (new_move): Ensure that no moves means no prior piece.

2005-03-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Show error then exit when 
	rendering fails, removing stand-in pixbuf since it is no longer needed.
	(new_move): Don't add to the move total when it's the same piece 
	moved as last time.
	* help/C/gnotski.xml: Checked and removed FIXME in docs.

2005-03-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotski.c (prepare_map): Fix a typo (bug #167275).

2005-03-03  Richard Hoelscher  <rah@rahga.com>

	* help/C/gnotski.xml: Update documentation for 2.10
	* help/C/figures/*.png: Update screenshots.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotski.xml: Bump the app version number. No revisions.

2005-02-17  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Minor edit to a few puzzles.

2005-02-11  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Added hint targets for 8 more puzzles. 7 remain.

2005-02-03  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c: Second half of "Sunshine" removed as it requires a
	special feature... though at 345 moves, it's hard enough anyway.

2005-01-21  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (configure_pixmaps_idle): Blank pixbuf when the
	image is corrupt or loader fails.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (load_image): Preimage API update, uri -> file.

2004-12-16  Richard Hoelscher  <rah@rahga.com>

	* gnotski.c (create_statusbar): Fix indentations in source.