@@ -1,3 +1,8 @@
+2005-03-31  Richard Hoelscher  <rah@rahga.com>
+
+	* gnotski.c (prepare_map): Just give the puzzle name, not "Level #:..."
+	(new_move): Mark moves label for translation.
+
 2005-03-21  Richard Hoelscher  <rah@rahga.com>
 
 	* gnotski.c : Minor code updates and clean up functions that didn't
@@ -6,7 +11,6 @@
 	(creates_statusbar): Status now resembles gnomine and same-gnome.
 	(button_release_space): Win message shortened.
 	(update_menu_state): Moved, use new GtkAction functions.
-	
 
 2005-03-17  Richard Hoelscher  <rah@rahga.com>
 
